fixed placeholder text and aligned image for each card
changed css blur filter and margins

--- a/style.css
+++ b/style.css
@@ -229,9 +229,9 @@ p {
 }
 
 .project-image4 {
-    margin-left: 30px;
-    margin-top: -150px;
-    filter: blur(0.7px);
+    margin-left: 50px;
+    margin-top: -90px;
+    
     
     
 }
